FELIX-6759 - Only reach for Unsafe when ordinary reflection is refused
SecureAction.getAccessor exists to defeat JPMS encapsulation, not because
setAccessible is unavailable: accessor.bytes is a class declared "package
java.net", injected into java.base through a trusted MethodHandles.Lookup
stolen with sun.misc.Unsafe, so that the setAccessible call comes from inside
that module and the access check passes without the package being open.

It was used unconditionally for java.net and jdk.internal.loader, and primed
eagerly in the static initialiser, so every framework start paid for it. On
JDK 25 that means every start prints

  WARNING: A terminally deprecated method in sun.misc.Unsafe has been called
  WARNING: sun.misc.Unsafe::staticFieldOffset has been called by
           org.apache.felix.framework.util.SecureAction
  WARNING: sun.misc.Unsafe::staticFieldOffset will be removed in a future
           release

Now plain setAccessible is tried first and Unsafe is the fallback for when the
JVM actually refuses. Where the package is open -- the Add-opens of the
org.apache.felix.main launcher, or any --add-opens on the command line -- the
deprecated method is never called at all. The eager priming is dropped, since
the accessor is built on demand.

Unsafe cannot simply be removed: verified on JDK 25 that without --add-opens,
setAccessible on URLClassLoader.addURL throws InaccessibleObjectException, and
ClassPathExtenderFactory needs that and
ClassLoaders$AppClassLoader.appendToClassPathForInstrumentation to install
framework extension bundles.

Suite is at the pre-existing baseline on JDK 21, and ExtensionManagerTest
still installs extensions on JDK 25 through the fallback.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>